fix style of Footer on mobile

--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -3,6 +3,7 @@
 
   .nav-link{
     box-shadow: none;
+    padding: .5rem 0;
   }
   .nav-link > span{
     display: inline-block;
